--- a/Components/Pages/Chat/Chat.razor
+++ b/Components/Pages/Chat/Chat.razor
@@ -18,6 +18,7 @@
         <ChatCitation File="麻疹通報個案疫調報告建議表.pdf"/>
         <ChatCitation File="麻疹傳染途徑、診斷、檢驗、治療及處置流程.pdf"/>
         <ChatCitation File="疑似麻疹個案接觸者之暴露後預防建議措施114年4月修訂.pdf"/>
+        <ChatCitation File="麻疹通報(疑似或確診)個案住院或居家隔離開立通之書之作業流程 (1140506).pdf"/>
     </NoMessagesContent>
 </ChatMessageList>
 
